# langchain-playground

./: .env.template  .gitignore  README.md  a.py  app.py  autogpt.ipynb  embedding.ipynb  embedding.py  lesson1.md  pyproject.toml  requirements.txt  summarize_chain.py
.streamlit/: secrets.toml.example
example/: requirements.txt
